--- a/src/main/metadata-au/pages/Lead_Address.page
+++ b/src/main/metadata-au/pages/Lead_Address.page
@@ -54,8 +54,8 @@
                 <apex:outputText label="Status" value="{!addr.Status__c}"/> 
             </apex:pageBlockSection>        
         </apex:pageBlock>
-    	<apex:pageBlock rendered="{!If(recordtypeid == 'Fleet_Lead',If(marketdiscriminator == 'AU' && ($Profile.Name == 'Fleet' || $Profile.Name == 'Fleet (Delete)'),true,false),false)}">
-            <apex:pageBlockSection columns="2">
+        <apex:pageBlock rendered="{!If(recordtypeid == 'Fleet_Lead',If(marketdiscriminator == 'AU' && ($Profile.Name == 'Fleet' || $Profile.Name == 'Fleet (Delete)'),true,false),false)}"  >
+            <apex:pageBlockSection columns="2" collapsible="true">
                 <apex:inputField label="Address Type" value="{!addr.Address_Type__c}"/> 
                 <apex:inputText label="Address Line 1" value="{!addressline1}"/>
                 <apex:inputText label="Company Name" value="{!companyname}"/>
@@ -65,15 +65,15 @@
                 <apex:inputField label="Country" value="{!addr.Country__c}"/> 
                 <apex:inputText label="Post Code" value="{!postcode}"/>
                 <apex:inputField label="Status" value="{!addr.Status__c}"/>
-                
-            </apex:pageBlockSection> 
-            <apex:pageBlockButtons location="bottom">
-        		<apex:commandButton value="Update" action="{!UpdateAddress}" styleClass="btn"/> 
-      		</apex:pageblockButtons> 
+                <apex:pageblockSectionItem >
+                     <apex:commandButton value="Update" action="{!Save}" styleClass="btn"/>
+                </apex:pageblockSectionItem>
+              </apex:pageBlockSection> 
+             
         </apex:pageBlock>
 
         <apex:pageBlock rendered="{!If(recordtypeid == 'Fleet_Lead',If(marketdiscriminator == 'NZ',true,false),false)}">
-            <apex:pageBlockSection columns="2">
+            <apex:pageBlockSection columns="2" collapsible="true">
                 <apex:outputText label="Address Type" value="{!addr.Address_Type__c}"/> 
                 <apex:outputText label="Address Line 1" value="{!addressline1}"/>
                 <apex:outputText label="Company Name" value="{!companyname}"/>
