--- a/src/main/metadata-au/pages/Lead_Add_MultiBrand.page
+++ b/src/main/metadata-au/pages/Lead_Add_MultiBrand.page
@@ -1,42 +1,34 @@
-<apex:page standardController="Lead__c" extensions="Lead_AddmultiBrandController" DocType="html-5.0">
+<apex:page standardController="Lead__c" extensions="Lead_AddmultiBrandController">
     <apex:pageMessages id="pgmasg"></apex:pageMessages>
-    <apex:stylesheet value="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
-    <style>
-  
-    </style>
-    
     <script>
         function refreshpage()
         {
             window.top.location='/{!Lead__c.id}';
         }
-        
     </script>
     <apex:form >
-    
-        <apex:pageBlock id="pb"  >
-            <apex:pageBlockSection id="refreshdata" columns="4"  >
-                <apex:repeat value="{!wrappermultibrand}" var="wrap" id="wrapmulbrand" >
-                  
-                        <apex:selectList value="{!wrap.vehiclebrand}" size="1" id="BrandId" label="Brand" style="width:30%">                           
+        <apex:pageBlock id="pb">
+            <apex:pageBlockSection id="refreshdata" columns="4">
+                <apex:repeat value="{!wrappermultibrand}" var="wrap" id="wrapmulbrand">
+                    <apex:outputLabel value="Brand">
+                        <apex:selectList value="{!wrap.vehiclebrand}" size="1" style="width:80px">                           
                             <apex:selectOptions value="{!brands[0]}" rendered="{!if(brands.size>0,true,false)}"/>
                             <apex:selectOptions value="{!brands[1]}" rendered="{!if(brands.size>1,true,false)}"/>
                             <apex:selectOptions value="{!brands[2]}" rendered="{!if(brands.size>2,true,false)}"/>
                             <apex:selectOptions value="{!brands[3]}" rendered="{!if(brands.size>3,true,false)}"/>
                             <apex:selectOptions value="{!brands[4]}" rendered="{!if(brands.size>4,true,false)}"/>                                                       
                         </apex:selectList> 
-                  
-                    
-                        <apex:inputText value="{!wrap.vechmodel}" label="Vehicle Model" style="width:30%"/>
-                   
-                    
-                        <apex:inputText value="{!wrap.vechquanty}"  label="Quantity" style="width:20%"/>
-               
-                    <apex:commandButton action="{!addrow}" value="+" reRender="refreshdata,pgmasg" id="thebutton" style="width:20%"/>
+                    </apex:outputLabel>
+                    <apex:outputLabel value="Vehicle Model">
+                        <apex:inputText value="{!wrap.vechmodel}"/>
+                    </apex:outputLabel>
+                    <apex:outputLabel value="Quantity">
+                        <apex:inputText value="{!wrap.vechquanty}" style="width:60px"/>
+                    </apex:outputLabel>
+                    <apex:commandButton action="{!addrow}" value="+" reRender="refreshdata,pgmasg" id="thebutton"/>
                 </apex:repeat>
                 <apex:commandButton action="{!save}" value="Save" oncomplete="refreshpage()"/>                
             </apex:pageBlockSection>         
         </apex:pageBlock>
-    
     </apex:form>
 </apex:page>
