--- a/src/main/metadata-au/pages/LeadProductDetailsInput.page
+++ b/src/main/metadata-au/pages/LeadProductDetailsInput.page
@@ -5,25 +5,28 @@
         {
             window.top.location='/{!Lead_Product__c.id}';
         }
-		
+        
     </script>
     <apex:form >
-	<!-- This is the change-->
+    <!-- This is the change-->
         <apex:pageBlock id="pb">
-            <apex:pageBlockSection id="refreshdata" columns="4">
+            <apex:pageBlockSection id="refreshdata" columns="5">
                 <apex:repeat value="{!wrappermultibrand}" var="wrap" id="wrapmulbrand">
+                    
+                    <apex:inputText value="{!wrap.vechquanty}" label="Brand"/>
                                        
                     <apex:inputText value="{!wrap.vechmodel}" label="No. of Vehicles" /> 
-                        <apex:outputLabel value="Model" style="font-weight:bold">
-                        <apex:selectList value="{!wrap.vehiclebrand}" size="1">                           
+                        
+                        <apex:selectList value="{!wrap.vehiclebrand}" size="1" label="Vehicle Model" style="font-weight:bold">                           
                             <apex:selectOptions value="{!brands[0]}" rendered="{!if(brands.size>0,true,false)}"/>
                             <apex:selectOptions value="{!brands[1]}" rendered="{!if(brands.size>1,true,false)}"/>
                             <apex:selectOptions value="{!brands[2]}" rendered="{!if(brands.size>2,true,false)}"/>
                             <apex:selectOptions value="{!brands[3]}" rendered="{!if(brands.size>3,true,false)}"/>
                             <apex:selectOptions value="{!brands[4]}" rendered="{!if(brands.size>4,true,false)}"/>                                                       
                         </apex:selectList> 
-                    </apex:outputLabel>                        
-                    <apex:inputText value="{!wrap.vechquanty}" label="Brand"/>
+                                      
+                    <apex:inputText value="{!wrap.vechmodeldetails}" label="Vehicle Model Details"/>
+                    
                     <apex:commandButton action="{!addrow}" value="+" reRender="refreshdata,pgmasg" id="thebutton"/>
                 </apex:repeat>           
             </apex:pageBlockSection> 
