--- a/src/main/metadata-au/pages/Lead_Add_MultiBrand.page
+++ b/src/main/metadata-au/pages/Lead_Add_MultiBrand.page
@@ -1,4 +1,4 @@
-<apex:page standardController="Lead__c" extensions="Lead_AddmultiBrandController">
+<apex:page standardController="Lead__c" extensions="Lead_AddmultiBrandController" showHeader="false" sidebar="false">
     <apex:pageMessages id="pgmasg"></apex:pageMessages>
     <script>
         function refreshpage()
@@ -8,9 +8,9 @@
     </script>
     <apex:form >
         <apex:pageBlock id="pb">
-            <apex:pageBlockSection id="refreshdata" columns="4">
+            <apex:pageBlockSection id="refreshdata" columns="4" showHeader="false">
                 <apex:repeat value="{!wrappermultibrand}" var="wrap" id="wrapmulbrand">
-                    <apex:outputLabel value="Brand">
+                    <apex:outputLabel value="Brand" style="font-weight:bold">
                         <apex:selectList value="{!wrap.vehiclebrand}" size="1" style="width:80px">                           
                             <apex:selectOptions value="{!brands[0]}" rendered="{!if(brands.size>0,true,false)}"/>
                             <apex:selectOptions value="{!brands[1]}" rendered="{!if(brands.size>1,true,false)}"/>
@@ -19,11 +19,11 @@
                             <apex:selectOptions value="{!brands[4]}" rendered="{!if(brands.size>4,true,false)}"/>                                                       
                         </apex:selectList> 
                     </apex:outputLabel>
-                    <apex:outputLabel value="Vehicle Model">
+                    <apex:outputLabel value="Vehicle Model Details" style="font-weight:bold">
                         <apex:inputText value="{!wrap.vechmodel}"/>
                     </apex:outputLabel>
-                    <apex:outputLabel value="Quantity">
-                        <apex:inputText value="{!wrap.vechquanty}" style="width:60px"/>
+                    <apex:outputLabel value="Quantity" style="font-weight:bold">
+                        <apex:inputText value="{!wrap.vechquanty}" style="width:60px;font-weight:bold"/>
                     </apex:outputLabel>
                     <apex:commandButton action="{!addrow}" value="+" reRender="refreshdata,pgmasg" id="thebutton"/>
                 </apex:repeat>
